--- a/tigers.yaml
+++ b/tigers.yaml
@@ -1,10 +1,6 @@
 team: Tigers
 
-<<<<<<< HEAD
-manager: Kenneth
-=======
-manager: Deborah
->>>>>>> ee485e0 (Edit Tigers)
+manager: Brenda
 
 coach : Grace
 
