--- a/tigers.yaml
+++ b/tigers.yaml
@@ -1,12 +1,8 @@
 team: Tigers
 
-<<<<<<< HEAD
-manager: Kenneth
-=======
 manager: Deborah
->>>>>>> ee485e0 (Edit Tigers)
 
-coach : Grace
+coach : Ruth
 
 members:
 - Linda
